kubernetes/esignet/istio-virtualservice.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: esignet
spec:
  gateways:
    - istio-system/all-hosts
  hosts:
    - ${ESIGNET_HOSTNAME}
  http:
    - match:
      - uri:
          prefix: /v1/mock-identity-system
      route:
        - destination:
            host: mock-identity-system
            port:
              number: 80
      headers:
        request:
          set:
            x-forwarded-proto: https
        response:
          set:
            Cache-control: no-store
            Pragma: no-cache
            Strict-Transport-Security: max-age=31536000; includeSubDomains
            X-Frame-Options: SAMEORIGIN
    - match:
      - uri:
          prefix: /v1/esignet
      route:
        - destination:
            host: esignet
            port:
              number: 80
      headers:
        request:
          set:
            x-forwarded-proto: https
        response:
          set:
            Cache-control: no-store
            Pragma: no-cache
            Strict-Transport-Security: max-age=31536000; includeSubDomains
            X-Frame-Options: SAMEORIGIN
    - route:
        - destination:
            host: oidc-ui
            port:
              number: 80
      headers:
        request:
          set:
            x-forwarded-proto: https
        response:
          set:
            Cache-control: no-store
            Pragma: no-cache
            Strict-Transport-Security: max-age=31536000; includeSubDomains
            X-Frame-Options: SAMEORIGIN
